--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -337,12 +337,13 @@
     justify-content: center;
     
     width: 100%;
-    height: 300px;
+    height: 100%;
     overflow: hidden;
 }
 
 #executives .candidate-col img {
     height: 100%;
+    width: 100%;
     display: block;
 
     object-fit: cover;
