--- a/assets/css/candidates.css
+++ b/assets/css/candidates.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(58, 58, 58);
+    background-color: rgb(24, 24, 24);
     justify-content: center;
     margin: 0;
 }
@@ -14,13 +14,45 @@ header{
     color: whitesmoke;
 }
 
-h1{
-    font-size: 30px;
+
+.active{
+    background-color: #18d26e;
+}
+
+.inactive{
+    background-color: #012534;
+}
+
+.navbar span{
+    display: flex;
+    font-size: 20px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
     align-items: center;
+    justify-content: center;
     padding-top: 1vh;
     color: whitesmoke;
+    /* border: red solid; */
+    width: 80%;
+    max-width: 1250px;
+    /* background-color: #012534; */
+    transition-duration: 500ms;
+    padding: 10px;
+}
+
+.navbar span:hover{
+    cursor: pointer;
+    background-color: #18d26e;
+}
+
+
+
+
+.navbar{
+    /* border: blue solid; */
+    display: flex;
+    justify-content: center;
+    padding: 0px 10%;
 }
 .enclosingDiv{
     display: flex;
@@ -29,6 +61,7 @@ h1{
     /* border: 2px red solid; */
     justify-content: center; 
     flex-wrap: wrap;
+    transition-duration: 1000ms;
 }
 .social-links a {
     height: 40px;
